log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 06:37:10 PM UTC 2026: 
 tests:  0|6
========================================
967fdeb
Fri May 15 07:21:26 PM UTC 2026: 
 graph.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:52:55: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   52 |     MapPair* nodoFuente = map_search(g->adjacencyMap, label1);
      |                                                       ^~~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:60:9: error: ‘nodoObjtivo’ undeclared (first use in this function); did you mean ‘nodoObjetivo’?
   60 |         nodoObjtivo = list_next(listaNodoFuente);
      |         ^~~~~~~~~~~
      |         nodoObjetivo
graph.c:60:9: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
0da0644
Fri May 15 07:22:22 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:60:9: error: ‘nodoObjtivo’ undeclared (first use in this function); did you mean ‘nodoObjetivo’?
   60 |         nodoObjtivo = list_next(listaNodoFuente);
      |         ^~~~~~~~~~~
      |         nodoObjetivo
graph.c:60:9: note: each undeclared identifier is reported only once for each function it appears in
e009208
Fri May 15 07:22:41 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
f3b92f0
Sun May 17 05:17:37 AM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:9: error: ‘nuevoGrafoo’ undeclared (first use in this function); did you mean ‘nuevoGrafo’?
   31 |     if (nuevoGrafoo == NULL) exit(EXIT_FAILURE);
      |         ^~~~~~~~~~~
      |         nuevoGrafo
graph.c:31:9: note: each undeclared identifier is reported only once for each function it appears in
graph.c:32:17: error: ‘Graph’ has no member named ‘adjancecyMap’; did you mean ‘adjacencyMap’?
   32 |     nuevoGrafo->adjancecyMap = create_map(is_equal_string());
      |                 ^~~~~~~~~~~~
      |                 adjacencyMap
graph.c:32:32: error: implicit declaration of function ‘create_map’; did you mean ‘createGraph’? [-Wimplicit-function-declaration]
   32 |     nuevoGrafo->adjancecyMap = create_map(is_equal_string());
      |                                ^~~~~~~~~~
      |                                createGraph
graph.c:32:43: error: too few arguments to function ‘is_equal_string’
   32 |     nuevoGrafo->adjancecyMap = create_map(is_equal_string());
      |                                           ^~~~~~~~~~~~~~~
graph.c:21:5: note: declared here
   21 | int is_equal_string(void *key1, void *key2) {
      |     ^~~~~~~~~~~~~~~
d3aa198
